<resources>
    <string name="app_name">Restaurant</string>
    <string name="app_about">About</string>
    <string name="app_healthyBowl">THE HEALTHY BOWL</string>
    <string name="app_Hello">Hello</string>
    <string name="app_say">What are you craving today?</string>
    <string name="app_category">Browse By Category</string>
    <string name="app_Home">Home</string>
    <string name="account_favorites">My Favorites</string>
    <string name="app_chineseFood">Chinese Food</string>
    <string name="app_JapFood">Japan Food</string>
    <string name="app_IndianFood">Indian Food</string>
    <string name="app_KoreanFood">Korean Food</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_login">Log in</string>
    <string name="nav_signin">Sign in</string>
    <string name="about">About</string>
    <string name="Favorites">Favorites</string>
    <string name="nav_edit">Set</string>
    <string name="nav_signOut">Sign out</string>


    <string name="account_acc">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_Email">Email:</string>
    <string name="account_Password">Password:</string>
    <string name="Login_btn">Log in</string>
    <string name="Create_Account_btn">Create Account</string>

    <string name="accountRegister">Create An Account</string>
    <string name="account_Name">Name:</string>
    <string name="account_userName">Username:</string>
    <string name="account_Address">Address:</string>
    <string name="account_checked_Password">Check Password:</string>
    <string name="Register_ClickMe"><u>Sign In Instead</u></string>

    <string name="dish_name">Dish Name</string>
    <string name="title_activity_nav_main">nav_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Edit">Edit Profile</string>
    <string name="save">SAVE</string>

    <string name="aboutTitle">Welcome to The Healthy Bowl!</string>
    <string name="aboutContent1">The Healthy Bowl is all about eating and leading a healthy lifestyle – whether it is western, chinese or other cuisines, you can find a wide range of restaurants that offer a healthy alternative for you!
</string>
    <string name="aboutContent2">TWith this app, you do not need to search or guess if the food is healthy, but The Healthy Bowl Team has done the work for you. Join us today to tantalize your taste buds and feel good that you are nourishing your body for good health!</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="facebook_link"><a href="https://www.facebook.com/Healthy-Bowl-101467555836745">Facebook</a></string>
    <string name="instagram_link"><a href="https://www.instagram.com/healthybowlsg/">Instagram</a></string>



</resources>