<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/AboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold_font"
        android:gravity="center"
        android:text="@string/aboutTitle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/about_content1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_condensed_font"
        android:text="@string/aboutContent1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/AboutTitle"
        app:layout_constraintStart_toStartOf="@+id/AboutTitle"
        app:layout_constraintTop_toBottomOf="@+id/AboutTitle" />

    <TextView
        android:id="@+id/about_content2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_condensed_font"
        android:text="@string/aboutContent2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/about_content1"
        app:layout_constraintStart_toStartOf="@+id/about_content1"
        app:layout_constraintTop_toBottomOf="@+id/about_content1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="Find more about Healthy Bowl :"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_content2" />

    <TextView
        android:id="@+id/facebook_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/facebook_link"
        android:autoLink="all"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/instagram_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/instagram_link"
        android:autoLink="all"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_txt"
        app:layout_constraintStart_toEndOf="@+id/facebook_txt"
        app:layout_constraintTop_toTopOf="@+id/facebook_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>
