<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">


    <EditText
        android:id="@+id/editTextPersonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Please Input Email..."
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInInterface" />

    <TextView
        android:id="@+id/PersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/roboto_bold_font"
        android:text="@string/account_Email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPersonEmail"
        app:layout_constraintEnd_toStartOf="@+id/editTextPersonEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonEmail"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/PersonPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_bold_font"
        android:text="@string/account_Password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPersonPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextPersonPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonPassword"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editTextPersonPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Please Input Passwords..."
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonEmail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonPassword">

        <Button
            android:id="@+id/LogInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="50dip"
            android:backgroundTint="#FF9800"
            android:text="@string/Login_btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:height="50dip"
            android:backgroundTint="#FF9800"
            android:text="@string/Create_Account_btn"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/SignInInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/nav_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/healthy_bowl_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>