<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold_font"
        android:text="@string/app_Hello"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_condensed_font"
        android:text="@string/app_say"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/Hello"
        app:layout_constraintTop_toBottomOf="@+id/Hello" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PopListView"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/say" />

    <TextView
        android:id="@+id/category_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_condensed_font"
        android:text="@string/app_category"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PopListView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CateView"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>